# testtask-on-crud-basics

./: alembic.ini  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8626fba83e14_.py
src/: database.py  main.py
src/manager/: models.py  router.py  schemas.py  service.py
